tests/scripts/type_errors/term_returns_string.roto
function bar() -> bool {
    return "hello"
}

function foo() {}
